gccida/g1/strength_reduce
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5443:4: error: expected ';' after expression
rtx condition_for_loop; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5443:5: error: use of undeclared identifier 'condition_for_loop'; did you mean 'get_condition_for_loop'?
rtx condition_for_loop; // rax 
    ^~~~~~~~~~~~~~~~~~
    get_condition_for_loop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.h:392:5: note: 'get_condition_for_loop' declared here
rtx get_condition_for_loop PARAMS ((const struct loop *, rtx));
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5445:4: error: expected ';' after expression
rtx v47; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5445:5: error: use of undeclared identifier 'v47'
rtx v47; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5456:4: error: expected ';' after expression
rtx v58; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5456:5: error: use of undeclared identifier 'v58'
rtx v58; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5462:4: error: expected ';' after expression
rtx v64; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5462:5: error: use of undeclared identifier 'v64'
rtx v64; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5463:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5463:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v74; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5474:4: error: expected ';' after expression
rtx v76; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5474:5: error: use of undeclared identifier 'v76'
rtx v76; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5484:4: error: expected ';' after expression
rtx v86; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5484:5: error: use of undeclared identifier 'v86'
rtx v86; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5503:4: error: expected ';' after expression
rtx v105; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5503:5: error: use of undeclared identifier 'v105'
rtx v105; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5509:4: error: expected ';' after expression
rtx last_insn; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/loop.c:5509:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/strength_reduce/src/obj/loop.o] Error 1
